--- a/Louron Sandbox/Louron Sandbox.vcxproj
+++ b/Louron Sandbox/Louron Sandbox.vcxproj
@@ -98,7 +98,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GLFW_INCLUDE_NONE;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)Louron Core\src;$(SolutionDir)Louron Core\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
@@ -115,7 +115,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GLFW_INCLUDE_NONE;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)Louron Core\src;$(SolutionDir)Louron Core\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
@@ -132,7 +132,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GLFW_INCLUDE_NONE;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)Louron Core\src;$(SolutionDir)Louron Core\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
@@ -149,7 +149,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GLFW_INCLUDE_NONE;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)Louron Core\src;$(SolutionDir)Louron Core\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
@@ -160,11 +160,12 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>assimp.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <Profile>false</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Main.cpp" />
-    <ClCompile Include="source\Test Scene Application.cpp" />
+    <ClCompile Include="Source\Sandbox Application.cpp" />
+    <ClCompile Include="source\Sandbox Layer\MainMenuLayer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Louron Core\Louron Core.vcxproj">
@@ -191,6 +192,8 @@
     <Image Include="assets\Images\cube_texture.png" />
     <Image Include="assets\Images\cube_texture_specular.png" />
     <Image Include="assets\Images\grass_texture.jpg" />
+    <Image Include="assets\Images\stone_texture.png" />
+    <Image Include="assets\Images\stone_texture_specular.png" />
     <Image Include="assets\Models\BackPack\backpack_ao.jpg" />
     <Image Include="assets\Models\BackPack\backpack_diffuse.jpg" />
     <Image Include="assets\Models\BackPack\backpack_normal.png" />
@@ -198,18 +201,16 @@
     <Image Include="assets\Models\BackPack\backpack_specular.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="source\Test Scene Application.h" />
-    <ClInclude Include="tests\MainMenu.h" />
-    <ClInclude Include="tests\Optimal Scene Setup.h" />
-    <ClInclude Include="tests\Scene 1.h" />
-    <ClInclude Include="tests\Scene 2.h" />
-    <ClInclude Include="tests\Scene 3.h" />
-    <ClInclude Include="tests\Scene 4.h" />
-    <ClInclude Include="tests\Scene 5.h" />
-    <ClInclude Include="tests\Scene 6.h" />
-    <ClInclude Include="tests\Scene 7.h" />
-    <ClInclude Include="tests\Scene 8.h" />
-    <ClInclude Include="tests\Scene 9.h" />
+    <ClInclude Include="source\Sandbox Layer\MainMenuLayer.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 1.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 2.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 3.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 4.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 5.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 6.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 7.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 8.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 9.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
