--- a/Louron Sandbox/Louron Sandbox.vcxproj.filters
+++ b/Louron Sandbox/Louron Sandbox.vcxproj.filters
@@ -99,5 +99,8 @@
     <ClInclude Include="source\Sandbox Layer\MainMenuLayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Test Scene Base.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
