--- a/Louron Sandbox/Louron Sandbox.vcxproj
+++ b/Louron Sandbox/Louron Sandbox.vcxproj
@@ -215,6 +215,7 @@
   <ItemGroup>
     <ClInclude Include="source\Sandbox Layer\MainMenuLayer.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 1.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 10.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 2.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 3.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 4.h" />
