--- a/Louron Sandbox/Louron Sandbox.vcxproj
+++ b/Louron Sandbox/Louron Sandbox.vcxproj
@@ -191,6 +191,7 @@
     <None Include="assets\Shaders\Basic\basic.glsl" />
     <None Include="assets\Shaders\Basic\basic_phong.glsl" />
     <None Include="assets\Shaders\Basic\basic_texture.glsl" />
+    <None Include="assets\Shaders\Forward+\FP_Light_Culling.comp" />
     <None Include="assets\Shaders\Materials\material_shader_flat.glsl" />
     <None Include="assets\Shaders\Materials\material_shader_phong.glsl" />
     <None Include="assimp-vc143-mt.dll">
@@ -216,6 +217,7 @@
     <ClInclude Include="source\Sandbox Layer\MainMenuLayer.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 1.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 10.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 11.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 2.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 3.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 4.h" />
@@ -225,6 +227,11 @@
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 8.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 9.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Test Scene Base.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\Shaders\Forward+\FP_Material_Shader.glsl">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
